# cmsis-wasm

./: .gitignore  CMakeLists.txt  README.md  build.bash  compile.sh  default-cmake-options.cmake
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
cmake-build/src/: Makefile  cmake_install.cmake
public/: cmsis-config-noconfig.cmake
src/: CMakeLists.txt
src/api/: cmsis_generic.c  cmsis_kernel.c  cmsis_message_queue.c  cmsis_mutexes.c  cmsis_semaphores.c  cmsis_semaphores_private.h  cmsis_thread.c
src/core/: cmsis_wasm.h  cmsis_wasm_common.h  cmsis_wasm_memory.c  cmsis_wasm_memory.h  cmsis_wasm_message_queue.c  cmsis_wasm_message_queue.h  cmsis_wasm_queue.c  cmsis_wasm_queue.h  cmsis_wasm_thread_sync.c  cmsis_wasm_thread_sync.h  cmsis_wasm_time.c  cmsis_wasm_time.h
test/: testapp.cpp
